tests/typecheck/fail/extern_void_param.tw
// Void is valid as an extern return but not as a boundary parameter.

extern host fn takes_void(x: Void)
